--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@google-cloud/storage": "^4.1.3",
     "@google-cloud/vision": "^1.7.2",
     "axios": "^0.18.1",
     "google-auth-library": "^5.7.0",
