--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "@google-cloud/storage": "^4.1.3",
     "@google-cloud/vision": "^1.7.2",
     "axios": "^0.18.1",
+    "form-data": "^3.0.0",
     "google-auth-library": "^5.7.0",
     "node-vibrant": "^3.1.5",
     "react": "^16.8.6",
