--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "@google-cloud/storage": "^4.1.3",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.3.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "concurrently": "^5.0.1",
