--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "body-parser": "^1.19.0",
     "cookie-session": "^1.3.3",
     "express": "^4.17.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "node-vibrant": "^3.1.5"
   },
   "devDependencies": {
     "concurrently": "^5.0.1",
